--- a/composer.json
+++ b/composer.json
@@ -13,10 +13,10 @@
     "require": {
         "php":            ">=5.3.3",
         "ext-SPL":        "*",
-        "doctrine/lexer": ">=1.0"
+        "doctrine/lexer": "~1.0"
     },
     "require-dev": {
-        "phpunit/phpunit":               ">=4.8",
+        "phpunit/phpunit":               "<5.0",
         "codeclimate/php-test-reporter": "dev-master"
     },
     "autoload": {
